# openmp

./: CMakeLists.txt
runtime/: CMakeLists.txt
runtime/cmake/: config-ix.cmake
runtime/src/: CMakeLists.txt  dllexports  dynamic_annotations.h  exports_so.txt  kmp.h  kmp_barrier.cpp  kmp_csupport.cpp  kmp_dispatch.cpp  kmp_ftn_entry.h  kmp_gsupport.cpp  kmp_lock.cpp  kmp_os.h  kmp_runtime.c  kmp_runtime.cpp  kmp_taskdeps.cpp  kmp_tasking.c  kmp_tasking.cpp  kmp_wait_release.h  ompt-event-specific.h  ompt-general.cpp  ompt-internal.h  ompt-specific.cpp  ompt-specific.h  tsan_annotations.c  tsan_annotations.h  z_Linux_util.c
runtime/src/include/50/: ompt.h.var
runtime/test/: lit.cfg
runtime/test/ompt/: callback.h
runtime/test/ompt/synchronization/reduction/: atomic_reduce.c  critical.c  critical_reduce.c  normal.c  tree_reduce.c
tools/archer/: CMakeLists.txt  LICENSE.txt  counter.cpp  counter.h  ftsan.c  json-output.cpp  json-output.h  ompt-tsan.cpp
tools/archer/tests/: lit.cfg
tools/archer/tests/barrier/: barrier.c
tools/archer/tests/critical/: critical.c  lock-nested.c  lock.c
tools/archer/tests/ompt/: ompt-signal.h
tools/archer/tests/parallel/: parallel-firstprivate.c  parallel-simple.c  parallel-simple2.c
tools/archer/tests/races/: critical-unrelated.c  lock-nested-unrelated.c  lock-unrelated.c  parallel-simple.c  task-dependency.c  task-taskgroup-unrelated.c  task-taskwait-nested.c  task-two.c
tools/archer/tests/reduction/: parallel-reduction-nowait.c  parallel-reduction.c
tools/archer/tests/task/: task-barrier.c  task-create.c  task-dependency.c  task-taskgroup-nested.c  task-taskgroup.c  task-taskwait-nested.c  task-taskwait.c
tools/archer/tests/worksharing/: ordered.c
tools/archer/tools/: CMakeLists.txt  clang-archer++.in  clang-archer.in
